--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,7 +33,7 @@
     // Files
     "files.eol": "\n",
     "files.insertFinalNewline": true,
-    "files.trimTrailingWhitespace": true,
+    "files.trimTrailingWhitespace": false,
     "files.associations": {
         "*.blade.php": "html",
         "*.php": "php",
@@ -135,7 +135,7 @@
     "intelephense.format.enable": true,
     "intelephense.completion.triggerParameterHints": true,
     "intelephense.completion.insertUseDeclaration": true,
-    "intelephense.completion.fullyQualifyGlobalConstantsAndFunctions": true,
+    "intelephense.completion.fullyQualifyGlobalConstantsAndFunctions": false,
     "intelephense.diagnostics.undefinedSymbols": false,
     "intelephense.trace.server": "messages",
     "intelephense.files.exclude": [
@@ -190,8 +190,9 @@
         "javascriptreact"
     ],
     // JS
-    "javascript.format.insertSpaceBeforeFunctionParenthesis": true,
-    "javascript.format.placeOpenBraceOnNewLineForFunctions": true,
+    "javascript.format.insertSpaceAfterFunctionKeywordForAnonymousFunctions": false,
+    "javascript.format.insertSpaceBeforeFunctionParenthesis": false,
+    "javascript.format.placeOpenBraceOnNewLineForFunctions": false,
     "javascript.format.placeOpenBraceOnNewLineForControlBlocks": true,
     "javascript.preferences.importModuleSpecifier": "relative",
     // Emmet
