--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -193,7 +193,7 @@
     "javascript.format.insertSpaceAfterFunctionKeywordForAnonymousFunctions": false,
     "javascript.format.insertSpaceBeforeFunctionParenthesis": false,
     "javascript.format.placeOpenBraceOnNewLineForFunctions": false,
-    "javascript.format.placeOpenBraceOnNewLineForControlBlocks": true,
+    "javascript.format.placeOpenBraceOnNewLineForControlBlocks": false,
     "javascript.preferences.importModuleSpecifier": "relative",
     // Emmet
     "emmet.includeLanguages": {
