fix: worspace path mapping

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
 			"port": 9003,
 			"log": false,
 			"pathMappings": {
-				"/var/www/html/backend": "${workspaceFolder}"
+				"/var/www/html": "${workspaceFolder}"
 			},
 			"hostname": "localhost",
 			"stopOnEntry": false
