add mongo db stubs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,6 +85,8 @@
         "mbstring",
         "mcrypt",
         "meta",
+        "mongo",
+        "mongodb",
         "mssql",
         "mysqli",
         "oci8",
