feat: upgrade settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,219 +1,150 @@
 {
-    // General
-    "window.zoomLevel": -1,
-    "workbench.colorTheme": "Dracula",
-    "workbench.iconTheme": "material-icon-theme",
-    "workbench.startupEditor": "welcomePageInEmptyWorkbench",
-    // Editor
-    "editor.tabSize": 4,
-    "editor.fontSize": 14,
-    "editor.lineHeight": 24,
-    "editor.letterSpacing": 0.5,
-    "editor.fontLigatures": true,
-    "editor.cursorStyle": "line",
-    "editor.cursorBlinking": "smooth",
-    "editor.insertSpaces": true,
-    "editor.autoIndent": "advanced",
-    "editor.wordWrap": "off",
-    "editor.formatOnPaste": false,
-    "editor.formatOnType": false,
-    "editor.inlineSuggest.enabled": true,
-    "editor.bracketPairColorization.enabled": true,
-    "editor.minimap.enabled": false,
-    "diffEditor.ignoreTrimWhitespace": false,
-    "editor.rulers": [
-        120
-    ],
-    // Explorer
-    "explorer.confirmDragAndDrop": true,
-    "explorer.confirmDelete": true,
-    "explorer.compactFolders": false,
-    "explorer.autoReveal": true,
-    "explorer.openEditors.visible": 1,
-    // Files
-    "files.eol": "\n",
-    "files.insertFinalNewline": true,
-    "files.trimTrailingWhitespace": false,
-    "files.associations": {
-        "*.blade.php": "html",
-        "*.php": "php",
-        "*.vue": "vue",
-        "*.php-cs": "php"
-    },
-    // Search
-    "search.collapseResults": "alwaysCollapse",
-    "search.showLineNumbers": true,
-    "search.exclude": {
-        "**/node_modules": true,
-        "**/bower_components": true,
-        "**/vendor": true,
-        "**/*.code-search": true
-    },
-    // Security
-    "security.workspace.trust.enabled": false,
-    "security.workspace.trust.untrustedFiles": "open",
-    // Intelephense
-    "php.validate.enable": false,
-    "php.suggest.basic": false,
-    "intelephense.stubs": [
-        "apache",
-        "bcmath",
-        "bz2",
-        "calendar",
-        "com_dotnet",
-        "Core",
-        "ctype",
-        "curl",
-        "date",
-        "dba",
-        "dom",
-        "enchant",
-        "exif",
-        "fileinfo",
-        "filter",
-        "fpm",
-        "ftp",
-        "gd",
-        "hash",
-        "iconv",
-        "imap",
-        "interbase",
-        "intl",
-        "json",
-        "ldap",
-        "libxml",
-        "mbstring",
-        "mcrypt",
-        "meta",
-        "mssql",
-        "mysqli",
-        "oci8",
-        "odbc",
-        "openssl",
-        "pcntl",
-        "pcre",
-        "PDO",
-        "pdo_ibm",
-        "pdo_mysql",
-        "pdo_pgsql",
-        "pdo_sqlite",
-        "pgsql",
-        "Phar",
-        "posix",
-        "pspell",
-        "readline",
-        "recode",
-        "Reflection",
-        "regex",
-        "session",
-        "shmop",
-        "SimpleXML",
-        "snmp",
-        "soap",
-        "sockets",
-        "sodium",
-        "SPL",
-        "sqlite3",
-        "standard",
-        "superglobals",
-        "sybase",
-        "sysvmsg",
-        "sysvsem",
-        "sysvshm",
-        "tidy",
-        "tokenizer",
-        "wddx",
-        "xml",
-        "xmlreader",
-        "xmlrpc",
-        "xmlwriter",
-        "Zend OPcache",
-        "zip",
-        "zlib"
-    ],
-    "intelephense.telemetry.enabled": false,
-    "intelephense.format.enable": true,
-    "intelephense.completion.triggerParameterHints": true,
-    "intelephense.completion.insertUseDeclaration": true,
-    "intelephense.completion.fullyQualifyGlobalConstantsAndFunctions": false,
-    "intelephense.diagnostics.undefinedSymbols": true,
-    "intelephense.trace.server": "messages",
-    "intelephense.files.exclude": [
-        "**/.git/**",
-        "**/.svn/**",
-        "**/.hg/**",
-        "**/CVS/**",
-        "**/.DS_Store/**",
-        "**/node_modules/**",
-        "**/bower_components/**",
-        "**/storage",
-        "**/storage/**",
-        //"**/tests/**",
-        "**/resources/views/**",
-        "**/database/migrations/**",
-        "**/storage/framework/views/**",
-        "_ide_helper.php",
-        "_ide_helper_models"
-    ],
-    // PHP
-    "[php]": {
-        "editor.defaultFormatter": "bmewburn.vscode-intelephense-client"
-    },
-    // Shell
-    "[shellscript]": {
-        "editor.insertSpaces": false,
-        "editor.useTabStops": true,
-        "editor.wordBasedSuggestions": true,
-        "editor.tabSize": 4,
-        "editor.autoIndent": "advanced"
-    },
-    // JSON
-    "[json]": {
-        "editor.defaultFormatter": "vscode.json-language-features"
-    },
-    // HTML
-    "html.format.wrapAttributes": "force",
-    "html.format.preserveNewLines": true,
-    "html.suggest.html5": true,
-    // CSS
-    "css.styleSheets": [
-        "https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css",
-        "/style.css",
-        "style.css",
-        "${fileBasenameNoExtension}.css"
-    ],
-    "css.enabledLanguages": [
-        "html",
-        "vue",
-        "php",
-        "jsx",
-        "javascriptreact"
-    ],
-    // JS
-    "javascript.format.insertSpaceAfterFunctionKeywordForAnonymousFunctions": false,
-    "javascript.format.insertSpaceBeforeFunctionParenthesis": false,
-    "javascript.format.placeOpenBraceOnNewLineForFunctions": false,
-    "javascript.format.placeOpenBraceOnNewLineForControlBlocks": false,
-    "javascript.preferences.importModuleSpecifier": "relative",
-    // Emmet
-    "emmet.includeLanguages": {
-        "javascript": "javascriptreact",
-        "vue-html": "html",
-        "plaintext": "jinja"
-    },
-    "emmet.triggerExpansionOnTab": true,
-    "emmet.syntaxProfiles": {
-        "javascript": {
-            "attr_quotes": "single",
-            "tag_nl": true
-        }
-    },
-    // Copilot
-    "github.copilot.enable": {
-        "*": true,
-        "yaml": false,
-        "plaintext": true,
-        "markdown": false,
-        "scminput": false
-    },
+	"workbench.colorTheme": "Dracula",
+	"workbench.iconTheme": "material-icon-theme",
+	"workbench.startupEditor": "welcomePageInEmptyWorkbench",
+	// Editor
+	"editor.tabSize": 4,
+	"editor.fontSize": 14,
+	"editor.lineHeight": 24,
+	"editor.letterSpacing": 0.5,
+	"editor.fontLigatures": true,
+	"editor.cursorStyle": "line",
+	"editor.cursorBlinking": "smooth",
+	"editor.insertSpaces": false,
+	"editor.autoIndent": "advanced",
+	"editor.wordWrap": "off",
+	"editor.formatOnPaste": true,
+	"editor.formatOnType": true,
+	"editor.inlineSuggest.enabled": true,
+	"editor.bracketPairColorization.enabled": true,
+	"editor.minimap.enabled": false,
+	"diffEditor.ignoreTrimWhitespace": true,
+	"editor.rulers": [80, 120],
+	// Explorer
+	"explorer.confirmDragAndDrop": false,
+	"explorer.confirmDelete": false,
+	"explorer.compactFolders": true,
+	"explorer.autoReveal": true,
+	"explorer.openEditors.visible": 0,
+	// Files
+	"files.eol": "\n",
+	"files.insertFinalNewline": true,
+	"files.trimTrailingWhitespace": true,
+	"files.associations": {
+		"*.blade.php": "php",
+		"*.vue": "vue",
+		"*.php-cs": "php"
+	},
+	// Search
+	"search.collapseResults": "alwaysCollapse",
+	"search.showLineNumbers": true,
+	"search.exclude": {
+		"**/node_modules": true,
+		"**/bower_components": true,
+		"**/vendor": true,
+		"**/*.code-search": true
+	},
+	// Security
+	"security.workspace.trust.enabled": false,
+	"security.workspace.trust.untrustedFiles": "open",
+	// Intelephense
+	"intelephense.stubs": [
+		"apache",
+		"bcmath",
+		"bz2",
+		"calendar",
+		"Core",
+		"ctype",
+		"curl",
+		"date",
+		"dom",
+		"fileinfo",
+		"filter",
+		"ftp",
+		"gd",
+		"hash",
+		"iconv",
+		"json",
+		"mbstring",
+		"mysqli",
+		"openssl",
+		"pcntl",
+		"pcre",
+		"PDO",
+		"pdo_mysql",
+		"pdo_pgsql",
+		"pdo_sqlite",
+		"Phar",
+		"posix",
+		"readline",
+		"Reflection",
+		"session",
+		"SimpleXML",
+		"soap",
+		"sockets",
+		"SPL",
+		"sqlite3",
+		"standard",
+		"tokenizer",
+		"xml",
+		"xmlreader",
+		"xmlwriter",
+		"xsl",
+		"Zend OPcache",
+		"zip",
+		"zlib"
+	],
+	"intelephense.telemetry.enabled": false,
+	"intelephense.format.enable": true,
+	"intelephense.completion.triggerParameterHints": true,
+	"intelephense.completion.insertUseDeclaration": true,
+	"intelephense.completion.fullyQualifyGlobalConstantsAndFunctions": false,
+	"intelephense.diagnostics.undefinedSymbols": true,
+	"intelephense.trace.server": "messages",
+	"intelephense.files.exclude": [
+		/* List of patterns */
+	],
+	"[php]": {
+		"editor.defaultFormatter": "bmewburn.vscode-intelephense-client"
+	},
+	// ESLint
+	"eslint.alwaysShowStatus": true,
+	"eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
+	"eslint.options": {
+		"extensions": [".js", ".jsx", ".ts", ".tsx"]
+	},
+	"eslint.lintTask.enable": true,
+	// Prettier
+	"prettier.singleQuote": true,
+	"prettier.printWidth": 120,
+	"prettier.tabWidth": 4,
+	"prettier.useTabs": true,
+	"prettier.semi": true,
+	"prettier.bracketSpacing": true,
+	"prettier.bracketSameLine": false,
+	"prettier.arrowParens": "avoid",
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	// Other Language Specific Settings
+	// ...
+	// Emmet
+	"emmet.includeLanguages": {
+		"javascript": "javascriptreact",
+		"vue-html": "html",
+		"plaintext": "jinja"
+	},
+	"emmet.triggerExpansionOnTab": true,
+	"emmet.syntaxProfiles": {
+		"javascript": {
+			"attr_quotes": "single",
+			"tag_nl": true
+		}
+	},
+	// Copilot
+	"github.copilot.enable": {
+		"*": true,
+		"yaml": false,
+		"plaintext": true,
+		"markdown": false,
+		"scminput": false
+	}
 }
