--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,14 +18,14 @@
 	"editor.inlineSuggest.enabled": true,
 	"editor.bracketPairColorization.enabled": true,
 	"editor.minimap.enabled": false,
-	"diffEditor.ignoreTrimWhitespace": true,
+	"diffEditor.ignoreTrimWhitespace": false,
 	"editor.rulers": [80, 120],
 	// Explorer
-	"explorer.confirmDragAndDrop": false,
-	"explorer.confirmDelete": false,
-	"explorer.compactFolders": true,
+	"explorer.confirmDragAndDrop": true,
+	"explorer.confirmDelete": true,
+	"explorer.compactFolders": false,
 	"explorer.autoReveal": true,
-	"explorer.openEditors.visible": 0,
+	"explorer.openEditors.visible": 1,
 	// Files
 	"files.eol": "\n",
 	"files.insertFinalNewline": true,
@@ -33,7 +33,12 @@
 	"files.associations": {
 		"*.blade.php": "php",
 		"*.vue": "vue",
-		"*.php-cs": "php"
+		"*.php-cs": "php",
+		"*.js": "javascript",
+		"*.jsx": "javascript",
+		"*.ts": "typescript",
+		"*.tsx": "typescript",
+		"docker-compose*": "yaml"
 	},
 	// Search
 	"search.collapseResults": "alwaysCollapse",
@@ -104,9 +109,6 @@
 	"intelephense.files.exclude": [
 		/* List of patterns */
 	],
-	"[php]": {
-		"editor.defaultFormatter": "bmewburn.vscode-intelephense-client"
-	},
 	// ESLint
 	"eslint.alwaysShowStatus": true,
 	"eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
@@ -124,13 +126,40 @@
 	"prettier.bracketSameLine": false,
 	"prettier.arrowParens": "avoid",
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
-	// Other Language Specific Settings
-	// ...
+	// PHP
+	"[php]": {
+		"editor.defaultFormatter": "bmewburn.vscode-intelephense-client"
+	},
+	// Shell
+	"[shellscript]": {
+		"editor.insertSpaces": false,
+		"editor.useTabStops": true,
+		"editor.wordBasedSuggestions": "allDocuments",
+		"editor.tabSize": 4,
+		"editor.autoIndent": "advanced"
+	},
+	// JSON
+	"[json]": {
+		"editor.defaultFormatter": "vscode.json-language-features"
+	},
+	// Docker
+	"[dockerfile]": {
+		"editor.defaultFormatter": "ms-azuretools.vscode-docker"
+	},
+	// Markdown
+	"[markdown]": {
+		"editor.defaultFormatter": "yzhang.markdown-all-in-one"
+	},
+	// YAML
+	"[yaml]": {
+		"editor.defaultFormatter": "redhat.vscode-yaml"
+	},
 	// Emmet
 	"emmet.includeLanguages": {
 		"javascript": "javascriptreact",
 		"vue-html": "html",
-		"plaintext": "jinja"
+		"plaintext": "jinja",
+		"blade": "html"
 	},
 	"emmet.triggerExpansionOnTab": true,
 	"emmet.syntaxProfiles": {
