--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -19,6 +19,8 @@
 		"eamodio.gitlens",
 		// Copilot
 		"github.copilot",
-		"github.copilot-chat"
+		"github.copilot-chat",
+		// Path Intellisense
+		"christian-kohler.path-intellisense"
 	]
 }
