--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -268,12 +268,30 @@
 		"**/.phpunit"
 	],
 	// ESLint
-	"eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
+	"eslint.validate": ["javascript", "javascriptreact"],
 	"eslint.options": {
-		"extensions": [".js", ".jsx", ".ts", ".tsx"]
+		"extensions": [".js", ".jsx"],
+		"env": {
+			"browser": true,
+			"node": true,
+			"es6": true
+		},
+		"parserOptions": {
+			"ecmaVersion": 2021,
+			"sourceType": "module",
+			"ecmaFeatures": {
+				"jsx": true
+			}
+		},
+		"rules": {
+			"semi": ["error", "always"],
+			"quotes": ["error", "double"]
+		},
+		"ignorePatterns": ["**/node_modules/**", "**/bower_components/**", "**/vendor/**"]
 	},
 	"eslint.workingDirectories": [{ "mode": "auto" }],
 	"eslint.lintTask.enable": true,
+
 	// Prettier
 	"prettier.singleQuote": true,
 	"prettier.printWidth": 120,
@@ -339,5 +357,6 @@
 		"plaintext": true,
 		"markdown": false,
 		"scminput": false
-	}
+	},
+	"redhat.telemetry.enabled": false,
 }
